feat: навигация, логика отрисовки блоков, refactor: функция конвертации времени вынесена в отдельную утилиту, переименованы скрипты с использованием библиотек

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,8 +1,10 @@
 #visualization {
   width: 100%;
+  display: none;
 }
 
 #cesiumContainer {
   height: 1000px;
   width: 100%;
+  display: none;
 }
