--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 #visualization {
   width: 100%;
   display: none;
 }
 
 #cesiumContainer {
-  height: 1000px;
+  height: calc(100vh - 82px);
   width: 100%;
   display: none;
 }
