--- a/styles/style.css
+++ b/styles/style.css
@@ -4,43 +4,70 @@
   box-sizing: border-box;
 }
 
-#visualization {
+#timeline {
   width: 100%;
   display: none;
+  padding: 10px;
 }
 
-#cesiumContainer {
-  height: calc(100vh - 82px);
+#visualization {
+  height: 100vh;
   width: 100%;
   display: none;
 }
 
 .navigation {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 250px;
+  background-color: #1c1c1d;
+  overflow-y: auto;
   display: flex;
-  justify-content: center;
-  gap: 10px;
-  margin: 20px 0;
+  flex-direction: column;
+  align-items: center
+}
+
+.navigation__logo {
+  margin: 20px 0 60px;
+  height: 100px;
+  width: 100px;
 }
 
 .navigation__button {
-  text-transform: uppercase;
-  display: inline-block;
-  padding: 12px 24px;
-  font-size: 16px;
-  font-weight: bold;
-  color: #fff;
-  background-color: #97b0f8;
+  width: 100%;
+  background-color: inherit;
   border: none;
-  border-radius: 6px;
-  cursor: pointer;
-  transition: all 0.3s ease;
+  color: rgba(244, 243, 244, 0.8);
+  height: 50px;
+  transition: all .6s ease;
+  text-align: start;
+  padding-left: 20px;
+  font-size: 16px;
+}
+
+.navigation__button.active {
+  background-color: #0062cc;
+  color: white;
 }
 
 .navigation__button:hover {
-  background-color: #7c9afc;
-  transform: scale(1.05);
+  border: 2px solid #0062cc;
 }
 
-.navigation__button:focus {
-  outline: none;
+.content {
+  margin-left: 250px;
+}
+
+.content__title {
+  font-size: 24px;
+  color: #1c1c1d;
+  padding-bottom: 20px;
+}
+
+.custom-event {
+  background-color: rgba(0, 255, 34, 0.2);
+  border-color: green;
+  color: black;
 }
